# chaoscougars

./: .gitignore  CHANGELOG.md  README.md  server.cfg  server.cfg.bkp
ChaosModV-master/: BUILD.bat  BUILD_STATUS.txt  CMakeLists.txt  README_BUILD.md  clientdoc.txt  config.ini  document.txt
ChaosModV-master/ChaosMod/: CMakeLists.txt  EffectDatabase.cpp  EffectDatabase.h  ExternalTrigger.cpp  ExternalTrigger.h  Main.cpp
ChaosModV-master/tools/: setup_vendors.ps1
resources/cougars/: config.lua  fxmanifest.lua  natives_docs.lua
resources/cougars/client/: cl_chaos.lua  cl_cougars.lua  cl_hud.lua  cl_journey.lua  cl_main.lua  cl_menu.lua  cl_spawn.lua  cl_stats.lua
resources/cougars/html/: index.html  menu.html  script.js  style.css
resources/cougars/server/: sv_achievements.lua  sv_chaos.lua  sv_cougars.lua  sv_journey.lua  sv_main.lua  sv_stats.lua
